# rust_yu

./: .gitignore  CLAUDE.md  Cargo.toml  agents.md  package-lock.json  spec.md
openspec/changes/add-install-metadata-and-cache/: design.md  proposal.md  tasks.md
openspec/changes/add-install-metadata-and-cache/specs/installed-app-metadata/: spec.md
openspec/changes/add-install-metadata-and-cache/specs/installed-app-scan-cache/: spec.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  create-icons.js  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clean.rs  error.rs  list.rs  mod.rs  report.rs  scan.rs  search.rs  uninstall.rs
src/commands/: clean.rs  list.rs  mod.rs  report.rs  search.rs  uninstall.rs
src/modules/: mod.rs
src/modules/cleaner/: filesystem.rs  mod.rs  models.rs  registry.rs  safety.rs  shortcuts.rs
src/modules/common/: error.rs  logging.rs  utils.rs
src/modules/lister/: enrichment.rs  mod.rs  models.rs  msi.rs  registry.rs  storage.rs  store.rs
src/modules/reporter/: html.rs  mod.rs  models.rs
src/modules/scanner/: appdata.rs  filesystem.rs  mod.rs  models.rs  registry.rs  shortcuts.rs
